# recsyslabs

./: README.md  pyproject.toml
notebooks/: generating_tabular_datasets.ipynb
src/recsyslabs/datasetgen/: dataset.py  fixed_observable_items.py  fixed_users.py  interactions_sim.py  tabular_data.py  tabular_interactions.py
tests/: conftest.py  run_all.py
tests/datasetgen/: test_interactions_sim.py  test_tabular_interactions.py
